<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inventory" >

    <TextView
        android:id="@+id/Topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/inventory"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/productId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productid"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Price"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/seperate1"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/inventoryView"
                android:layout_width="match_parent"
                android:layout_height="294dp" >
            </ListView>
        </LinearLayout>

        <View
            android:id="@+id/seperate2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="#CCCCCC" />

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Backbutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Back" />

            <Button
                android:id="@+id/CheckAllButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="5dp"
                android:text="CheckAll" />

            <Button
                android:id="@+id/RemoveButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="5dp"
                android:text="Remove" />

            <Button
                android:id="@+id/Addbutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
      			android:paddingLeft="10dip"
      			android:layout_marginLeft="10dip"
                android:layout_marginTop="5dp"
                android:text="Add" />
        </LinearLayout>
    </TableLayout>

</LinearLayout>