<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/productDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/product_detail_"
            android:textColor="#FCD71E" 
            android:textStyle="bold"
              android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/seperate3"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FCD71E" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_id_"
                android:textColor="#FCD71E" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtProductId"
                android:name="productId"
                android:layout_width="fill_parent"
                android:textColor="#FCD71E" 
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_"
                android:textColor="#FCD71E" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="#FEFCFF"
                android:textColorHint="#CCCCCC" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PRICE"
                android:textColor="#FCD71E" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:inputType="numberDecimal"
                android:background="#FEFCFF"
                android:textColorHint="#CCCCCC" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COST"
                android:textColor="#FCD71E" 
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputCost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:inputType="numberDecimal"
                android:background="#FEFCFF"
                android:textColorHint="#CCCCCC" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FCD71E" 
                android:text="QUANTITY"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputQuantity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="#FEFCFF"
                android:inputType="number"
                android:textColorHint="#CCCCCC" />

        </TableRow>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="10dp"
        android:background="#FCD71E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/Backbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dip"
            android:background="@drawable/rounded2"
            android:textStyle="bold"
            android:text="Back" />

        <Button
            android:id="@+id/EditButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dip"
            android:background="@drawable/rounded2"
            android:textStyle="bold"
            android:text="Edit" />
    </LinearLayout>

</LinearLayout>